        

**********************************************************************************
*** HEAD CONTENT *****************************************************************
**********************************************************************************
  
  What's new in this drop
  ================================================================================

  PRs Fixed in this Release
  ================================================================================
  1GKEG73: ITPJCORE:WIN2000 - search (136): missing field declaration
  1GKB9YH: ITPJCORE:WIN2000 - search for field refs - incorrect results
  1GJL6EJ: ITPJCORE:WINNT - JavaConventions.validateClasspath: Compares against variable name
  1GDQEAS: ITPJUI:ALL - Indexer - delete unused indexes on Java core plug-in shutdown  

  PRs Closed in this Release
  ===============================================================================
  1GKECWC: ITPJCORE:WINNT - Organize Imports fails: Typerefs not complete
  1GKCH3N: ITPJCORE:WIN2000 - search: method refs - super call not found
  1GKB475: ITPJCORE:WINNT - StringIndexOutOfBoundsException on searchfor methods
  1GJL6V0: ITPJCORE:WINNT - JavaConventions.validateClasspath: IStatus usage
  1GKM1MU: ITPJCORE:WINNT - Classpath validation: Overlapping accepted
  1GJL7RS: ITPJCORE:WINNT - JavaConventions.validateClasspath: nested sourcefolders

**********************************************************************************
*** BUILD ??? (2.0 STREAM, v_201_02) *********************************************
**********************************************************************************

  What's new in this drop
  ================================================================================
  * New AST node for empty statements (org.eclipse.jdt.internal.compiler.ast.EmptyStatement)
  	i.e. 2 more APIs on the AST visitor.
	Note: this was not an official API