@@ -15,17 +15,15 @@ import org.eclipse.jdt.internal.compiler.parser.*;
 import org.eclipse.jdt.internal.compiler.impl.*;
 
 public abstract class Engine implements ITypeRequestor {
-
-	public LookupEnvironment lookupEnvironment;
-
+	public LookupEnvironment lookupEnvironment;
+
 	/**
 	 * Add an additional binary type
 	 */
 	public void accept(IBinaryType binaryType, PackageBinding packageBinding) {
 		lookupEnvironment.createBinaryTypeFrom(binaryType, packageBinding);
 	}
-
-	/**
+	/**
 	 * Add an additional compilation unit.
 	 */
 	public void accept(ICompilationUnit sourceUnit) {
@@ -36,8 +34,7 @@ public abstract class Engine implements ITypeRequestor {
 		lookupEnvironment.buildTypeBindings(parsedUnit);
 		lookupEnvironment.completeTypeBindings(parsedUnit, true);
 	}
-
-	/**
+	/**
 	 * Add additional source types (the first one is the requested type, the rest is formed by the
 	 * secondary types defined in the same compilation unit).
 	 */
@@ -51,14 +48,13 @@ public abstract class Engine implements ITypeRequestor {
 				true,
 				lookupEnvironment.problemReporter,
 				result);
-
-		if (unit != null) {
+		if (unit != null) {
 			lookupEnvironment.buildTypeBindings(unit);
 			lookupEnvironment.completeTypeBindings(unit, true);
 		}
 	}
-
-	public abstract AssistParser getParser();
+	public abstract AssistParser getParser();
+
 	protected void parseMethod(CompilationUnitDeclaration unit, int position) {
 		for (int i = unit.types.length; --i >= 0;) {
 			TypeDeclaration type = unit.types[i];
@@ -71,8 +67,7 @@ public abstract class Engine implements ITypeRequestor {
 			}
 		}
 	}
-
-	private void parseMethod(
+	private void parseMethod(
 		TypeDeclaration type,
 		CompilationUnitDeclaration unit,
 		int position) {
@@ -118,8 +113,7 @@ public abstract class Engine implements ITypeRequestor {
 			}
 		}
 	}
-
-	protected void reset() {
+	protected void reset() {
 		lookupEnvironment.reset();
 	}
 }
